--- a/pages/blog.html
+++ b/pages/blog.html
@@ -10,6 +10,11 @@
         content="coding blog, coding experiences, content creation, social media management, video editing, career change blog">
     <meta name="author" content="LJ Talks">
     <title>My Coding Journey</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
+    </style>
     <link rel="stylesheet" href="../assets/css/style.css">
     <!-- MailerLite Universal -->
     <script>
@@ -49,70 +54,107 @@
             </nav>
         </div>
     </header>
-
+    <!-- Blog post -->
     <main>
-        <section id="blog">
-            <div class="container">
-                <h2>Blog</h2>
-                <p>Check out my latest blog posts and updates.</p>
-            </div>
-        </section>
-
-        <!-- Blog post -->
-
-        <section>
+        <section id="blog" class="container blog-post">
             <h2>Things I Have Learned. Week 2, Day 5.</h2>
-            <p> Now that the code is getting bigger and more complicated, it’s useful to keep an eye on what your code
-                is producing.</p>
+            <div class="blog-content">
+                <div class="text">
+                    <p> Now that the code is getting bigger and more complicated, it’s useful to keep an eye on what
+                        your code is producing.</p>
+                    <p> Something as simple as an HDMI cable can easily transform your coding experience,
+                        especially if you have a small screen laptop.</p>
 
-            <p> Something as simple as an HDMI cable can easily transform your coding experience,
-                especially if you have a small screen laptop.</p>
+                    <h3> Method 1: HDMI Cable </h3>
+                    <p>Check out this product on <a href="https://amzn.to/3ykDImV" target="_blank"
+                            rel="noopener noreferrer" class="amazon">Amazon (other brands are available!)</a>.</p>
+                    <!-- add image https://amzn.to/3ykDImV-->
 
-            <p> Method 1: HDMI Cable </p>
-            <p>Check out this product on <a href="https://amzn.to/3ykDImV" target="_blank" rel="noopener noreferrer"
-                    class="amazon">Amazon Link (other brands are available!)</a>.</p>
+                    <p> Plug one end into the laptop, plug the other end into the nearest TV, and set up dual screen.
+                        Use your laptop screen to input the code and watch the TV to see real-time changes!</p>
+                    <p>You’re welcome.</p>
+                    <h3> Method 2: Wireless Display Adapters</h3>
+                    <p>If you prefer a wireless setup, consider using devices like Google Chromecast or the Microsoft
+                        Wireless
+                        Display Adapter.</p>
+                    <p>These allow you to stream your computer’s display wirelessly to your TV. Just follow
+                        the device-specific instructions to connect your computer to your TV.</p>
 
-            <p> Plug one end into the laptop, plug the other end into the nearest TV, and set up dual screen.
-                Use your laptop screen to input the code and watch the TV to see real-time changes!</p>
-            <p>You’re welcome.</p>
-            <p> Method 2: Wireless Display Adapters</p>
-            <p>If you prefer a wireless setup, consider using devices like Google Chromecast or the Microsoft Wireless
-                Display Adapter.</p>
-            <p>These allow you to stream your computer’s display wirelessly to your TV. Just follow
-                the device-specific instructions to connect your computer to your TV.</p>
+                    <h3> Method 3: Smart TV Apps</h3>
+                    <p> Some smart TVs have built-in apps or support screen mirroring technologies like Miracast,
+                        AirPlay, or
+                        Chromecast. You can use these features to mirror your computer screen to your TV wirelessly.</p>
 
-            <p> Method 3: Smart TV Apps</p>
-            <p> Some smart TVs have built-in apps or support screen mirroring technologies like Miracast, AirPlay, or
-                Chromecast. You can use these features to mirror your computer screen to your TV wirelessly.</p>
+                </div>
+                <div class="image">
+                    <a href="https://amzn.to/3ykDImV" target="_blank"
+                            rel="noopener noreferrer" class="amazon-image">
+                    <img src="/assets/images/affiliate/amazon/3ykDImV1.png" alt="Ubluker 10K 8K 4K HDMI Cable 48Gbps 1.5M, Certified Ultra High Speed HDMI® Cable 4K 240Hz 144Hz 8K 60Hz 0.01ms HDR10+ ARC eARC HDCP2.3 Netflix Roku TV PC Monitor Projector PS5 Xbox"></a>
+                </div>
+            </div>
+            <div class="blog-content reverse">
+                <div class="text">
+                    <h3> Method 4: DisplayPort or USB-C to HDMI Adapter</h3>
+                    <p> If your computer has a DisplayPort or USB-C output, you can use an adapter to connect to the
+                        HDMI port
+                        on your TV. This is a great alternative if your laptop doesn’t have an HDMI port.</p>
+                    <h3> Steps to Set Up the TV as a Second Screen</h3>
+                    <ol>
+                        <li> Connect the TV:
+                        </li>
+                        <li> Use the appropriate cable or wireless method to connect your TV to your computer.
+                        </li>
+                        <li> Configure Display Settings:
+                            <ul>
+                                <li>Windows:
+                                    <ul>
+                                        <li> Right-click on the desktop and select "Display settings."
+                                        </li>
+                                        <li> You should see your TV listed as a second monitor. If not, click on
+                                            "Detect."
+                                        </li>
+                                        <li> Choose how you want to use the TV: "Duplicate" (mirror the display),
+                                            "Extend" (use
+                                            as a separate screen), or "Second screen only."
+                                        </li>
+                                    </ul>
+                                </li>
+                            </ul>
+                            <ul>
+                                <li>On macOS:
+                                    <ul>
+                                        <li>Go to "System Preferences" > "Displays."
+                                        </li>
+                                        <li>You should see the TV listed as a second display. Adjust the settings to
+                                            "Mirror
+                                            Displays" or "Extend Desktop."
+                                        </li>
+                                    </ul>
+                                </li>
+                            </ul>
+                        </li>
+                        <li> Adjust Resolution and Scaling:
+                            <ul>
+                                Ensure that the resolution and scaling settings are appropriate for your TV to get the
+                                best
+                                picture
+                                quality.
+                            </ul>
+                        </li>
+                    </ol>
+                </div>
 
-            <p> Method 4: DisplayPort or USB-C to HDMI Adapter</p>
-            <p> If your computer has a DisplayPort or USB-C output, you can use an adapter to connect to the HDMI port
-                on your TV. This is a great alternative if your laptop doesn’t have an HDMI port.</p>
-
-            <p> Steps to Set Up the TV as a Second Screen
-                Connect the TV:
-
-                Use the appropriate cable or wireless method to connect your TV to your computer.
-                Configure Display Settings:
-
-                On Windows:
-                Right-click on the desktop and select "Display settings."
-                You should see your TV listed as a second monitor. If not, click on "Detect."
-                Choose how you want to use the TV: "Duplicate" (mirror the display), "Extend" (use as a separate
-                screen), or "Second screen only."
-                On macOS:
-                Go to "System Preferences" > "Displays."
-                You should see the TV listed as a second display. Adjust the settings to "Mirror Displays" or "Extend
-                Desktop."
-                Adjust Resolution and Scaling:
-
-                Ensure that the resolution and scaling settings are appropriate for your TV to get the best picture
-                quality.
-                Using your TV as a second screen can be very beneficial for coding, as it allows you to have more screen
-                real estate for your development environment and to easily view output or documentation.</p>
-
+                <div class="image">
+                    <a href="https://amzn.to/3ykDImV" target="_blank"
+                            rel="noopener noreferrer" class="amazon-image">
+                    <img src="/assets/images/affiliate/amazon/3ykDImV2.png" alt="Ubluker 10K 8K 4K HDMI Cable 48Gbps 1.5M, Certified Ultra High Speed HDMI® Cable 4K 240Hz 144Hz 8K 60Hz 0.01ms HDR10+ ARC eARC HDCP2.3 Netflix Roku TV PC Monitor Projector PS5 Xbox"></a>
+                </div>
+            </div>
+            <p> Using your TV as a second screen can be very beneficial for coding, as it allows you to have
+                more screen real estate for your development environment and to easily view output or documentation.</p>
         </section>
     </main>
+    <!-- Footer-->
     <footer>
         <div class="container">
             <div class="footer-top">
@@ -120,7 +162,8 @@
             </div>
             <div class="footer-bottom">
                 <div class="footer-left">
-                    <p>As an <a href="https://amzn.to/4cZ7Tz3" target="_blank" class="amazon">Amazon Associate</a>, I earn from qualifying purchases.</p>
+                    <p>As an <a href="https://amzn.to/4cZ7Tz3" target="_blank" class="amazon" alt="Glittery Garden Linux Commands Line Mouse pad - Extended Large Cheat Sheet Mousepad. Shortcuts to Kali/Red Hat/Ubuntu/OpenSUSE/Arch/Debian/Unix Programmer. XL Non-Slip Gaming Desk mat">Amazon Associate</a>, I
+                        earn from qualifying purchases.</p>
                 </div>
                 <div class="footer-center">
                     <p>&copy; 2024 My Coding Journey. All rights reserved.</p>
