--- a/pages/blog.html
+++ b/pages/blog.html
@@ -48,6 +48,8 @@
                     <li class="dropdown">
                         <img src="../assets/images/logo/round-logo.png" alt="Logo" class="logo-round"></a>
                         <div class="dropdown-content">
+                            <button onclick="myFunction()" class="dropbtn">Dropdown</button>
+                            <div id="myDropdown" class="dropdown-content">
                             <a href="blog.html" class="active">Blog</a>
                             <a href="about.html">About</a>
                             <!--<a href="portfolio.html">Portfolio</a>-->
